fix(website): span spacing in diagonistics

--- a/website/src/playground/styles/_diagnostics.scss
+++ b/website/src/playground/styles/_diagnostics.scss
@@ -36,6 +36,7 @@ ul.diagnostics-list {
     padding-right: 10px;
     cursor: pointer;
     display: flex;
+    white-space: pre;
 
     img {
       margin: 7px 10px;
